--- a/src/Components/Forms/button.module.css
+++ b/src/Components/Forms/button.module.css
@@ -3,6 +3,7 @@
   font-family: var(--type-first);
   cursor: pointer;
   border: none;
+  text-align: center;
   border-radius: 0.4rem;
   background: #fb1;
   color: #764701;
