--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,10 @@ a {
   color: #333;
 }
 
+.mainContainer {
+  margin-top: 4rem;
+}
+
 .title {
   font-family: var(--type-second);
   font-size: 3rem;
