--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Spectral:wght@700&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
+  padding-top: 4rem;
   margin: 0px;
   color: #333;
   --type-first: Helvetica, Arial, sans-serif;
-  --type-second: "espectral", Georgia;
+  --type-second: 'Spectral', Georgia;
   font-family: var(--type-first);
-  padding-top: 4rem;
 }
 
 h1,
@@ -41,37 +41,37 @@ input {
   color: #333;
 }
 
+a {
+  text-decoration: none;
+  color: #333;
+}
+
 .container {
   max-width: 50rem;
   padding: 0 1rem;
   margin: 0 auto;
 }
 
-a {
-  text-decoration: none;
-  color: #333;
-}
-
 .mainContainer {
-  margin-top: 4rem;
+  margin-top: 2rem;
 }
 
 .title {
   font-family: var(--type-second);
-  font-size: 3rem;
   line-height: 1;
-  color: #333;
+  font-size: 3rem;
   margin: 1rem 0;
   position: relative;
+  z-index: 1;
 }
 
 .title::after {
-  content: "";
+  content: '';
   display: block;
-  position: absolute;
   width: 1.5rem;
   height: 1.5rem;
   background: #fb1;
+  position: absolute;
   bottom: 5px;
   left: -5px;
   border-radius: 0.2rem;
@@ -81,12 +81,26 @@ a {
 .animeLeft {
   opacity: 0;
   transform: translateX(-20px);
-  animation: animeLeft 0.5s forwards;
+  animation: animeLeft 0.3s forwards;
 }
 
 @keyframes animeLeft {
   to {
     opacity: 1;
-    transform: translateX(0);
+    transform: initial;
   }
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh + 10rem);
+}
+
+.AppBody {
+  flex: 1;
+}
+
+.VictoryContainer {
+  height: initial !important;
 }
