--- a/src/Components/Feed/FeedPhotosItem.module.css
+++ b/src/Components/Feed/FeedPhotosItem.module.css
@@ -1,9 +1,9 @@
 .photo:nth-child(2) {
-  grid-column: span 2 / 4;
+  grid-column: 2 / 4;
   grid-row: span 2;
 }
 
-@media screen and (max-width: 40rem) {
+@media (max-width: 40rem) {
   .photo:nth-child(2) {
     grid-column: initial;
     grid-row: initial;
@@ -17,12 +17,12 @@
   cursor: pointer;
 }
 
-.photo img {
+.photo > div {
   grid-area: 1/1;
 }
 
-.photo span {
-  background: rgba (0, 0, 0, 0.3);
+.visualizacao {
+  background: rgba(0, 0, 0, 0.3);
   color: white;
   font-size: 1rem;
   text-align: center;
@@ -32,15 +32,15 @@
   display: none;
 }
 
-.photo span::before {
+.visualizacao::before {
   width: 16px;
   height: 10px;
-  content: "";
+  content: '';
   display: inline-block;
   margin-right: 0.25rem;
-  background: url("../../Assets/visualizacao.svg") no-repeat;
+  background: url('../../Assets/visualizacao.svg') no-repeat;
 }
 
-.photo:hover span {
+.photo:hover .visualizacao {
   display: flex;
 }
