--- a/src/Components/Login/LoginForm.module.css
+++ b/src/Components/Login/LoginForm.module.css
@@ -10,7 +10,7 @@
 }
 
 .perdeu::after {
-  content: "";
+  content: '';
   height: 2px;
   width: 100%;
   background: currentColor;
@@ -19,11 +19,12 @@
 
 .cadastro {
   margin-top: 4rem;
+  margin-bottom: 4rem;
 }
 
 .cadastro p {
-  margin: 2rem 0 0.5rem 0;
-  bottom: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .subtitle {
@@ -33,7 +34,7 @@
 }
 
 .subtitle::after {
-  content: "";
+  content: '';
   display: block;
   background: #ddd;
   height: 0.5rem;
