--- a/src/Components/User/UserHeaderNav.module.css
+++ b/src/Components/User/UserHeaderNav.module.css
@@ -28,13 +28,13 @@
   outline: none;
 }
 
-.nav a:global(.active) {
+.nav :global(a.active) {
   background: white;
   box-shadow: 0 0 0 3px #fea;
   border-color: #fb1;
 }
 
-.nav a:global(.active) img > * {
+.nav :global(a.active) svg > * {
   fill: #fb1;
 }
 
@@ -53,7 +53,7 @@
 }
 
 .mobileButton::after {
-  content: "";
+  content: '';
   display: block;
   width: 1.2rem;
   height: 2px;
@@ -74,11 +74,10 @@
 }
 
 .mobileButtonActive::after {
-  transform: rotate(-90deg);
+  transform: rotate(90deg);
   width: 4px;
   height: 4px;
   box-shadow: 0 8px currentColor, 0 -8px currentColor;
-  transition: 0.2s;
 }
 
 .navMobile {
@@ -88,25 +87,11 @@
   right: 0px;
   padding: 0 1rem;
   background: white;
-  box-shadow: 0 1px 2px rgba(0 0 0 0.2);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   border-radius: 0.2rem;
-  transform: translateY(-10px);
+  transform: translateX(-10px);
   opacity: 0;
   pointer-events: none;
-}
-
-.navMobile a,
-.navmobile Button {
-  display: flex;
-  align-items: center;
-  background: none;
-  width: 100%;
-  border: none;
-  border-bottom: 1px solid #eee;
-  padding: 0.5rem;
-  cursor: pointer;
-  text-decoration: none;
-  color: #333;
 }
 
 .navMobileActive {
@@ -117,6 +102,27 @@
   z-index: 100;
 }
 
+.navMobile a,
 .navMobile button {
+  display: flex;
+  align-items: center;
+  background: none;
+  width: 100%;
   border: none;
+  border-bottom: 1px solid #eee;
+  padding: 0.5rem 0;
+  cursor: pointer;
+}
+
+.navMobile a:hover svg > *,
+.navMobile button:hover svg > * {
+  fill: #fb1;
+}
+
+.navMobile button {
+  border-bottom: none;
+}
+
+.navMobile svg {
+  margin-right: 0.5rem;
 }
